oriterm_core/tests/vttest/snapshots/vttest__menu8__120x40_08_vt102_13.snap
---
source: oriterm_core/tests/vttest/menu8.rs
expression: text
---
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA                                                                   
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB                                                                    
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC                                                                     
The right column should be staggered DDDDDDDDDDDDDDDDDDDDDDDDD                                                                      
by one.  Push <RETURN>EEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEEE                                                                       
FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF                                                                        
GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG                                                                         
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH                                                                          
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIIII                                                                           
JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ                                                                            
KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK                                                                             
LLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLLL                                                                              
MMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMMM                                                                               
NNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNNN                                                                                
OOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOOO                                                                                 
PPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPPP                                                                                  
QQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQQ                                                                                   
RRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRRR                                                                                    
SSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSSS                                                                                     
TTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTTT                                                                                      
UUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUUU                                                                                       
VVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVVV                                                                                        
WWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWWW                                                                                         
XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX                                                                                          
YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY                                                                                           
ZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZZ                                                                                            
[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[[                                                                                             
\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\                                                                                              
]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]]                                                                                               
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^                                                                                                
___________________________________                                                                                                 
``````````````````````````````````                                                                                                  
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa                                                                                                   
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb                                                                                                    
ccccccccccccccccccccccccccccccc                                                                                                     
dddddddddddddddddddddddddddddd                                                                                                      
eeeeeeeeeeeeeeeeeeeeeeeeeeeee                                                                                                       
ffffffffffffffffffffffffffff                                                                                                        
ggggggggggggggggggggggggggg                                                                                                         
hhhhhhhhhhhhhhhhhhhhhhhhhh
