oriterm_core/tests/vttest/snapshots/vttest__menu8__80x24_08_vt102_04.snap
---
source: oriterm_core/tests/vttest/menu8.rs
expression: text
---
AB                                                                              
                                                                                
                                                                                
Test of 'Delete Character'. The top line should be 'AB'. Push <RETURN>
