oriterm_core/tests/vttest/snapshots/vttest__menu8__80x24_08_vt102_06.snap
---
source: oriterm_core/tests/vttest/menu8.rs
expression: text
---
AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA                                         
BBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBBB                                          
CCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCCC                                           
The right column should be staggered                                            
by one.  Push <RETURN>EEEEEEEEEEEEE                                             
FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFF                                              
GGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGGG                                               
HHHHHHHHHHHHHHHHHHHHHHHHHHHHHHHH                                                
IIIIIIIIIIIIIIIIIIIIIIIIIIIIIII                                                 
JJJJJJJJJJJJJJJJJJJJJJJJJJJJJJ                                                  
KKKKKKKKKKKKKKKKKKKKKKKKKKKKK                                                   
LLLLLLLLLLLLLLLLLLLLLLLLLLLL                                                    
MMMMMMMMMMMMMMMMMMMMMMMMMMM                                                     
NNNNNNNNNNNNNNNNNNNNNNNNNN                                                      
OOOOOOOOOOOOOOOOOOOOOOOOO                                                       
PPPPPPPPPPPPPPPPPPPPPPPP                                                        
QQQQQQQQQQQQQQQQQQQQQQQ                                                         
RRRRRRRRRRRRRRRRRRRRRR                                                          
SSSSSSSSSSSSSSSSSSSSS                                                           
TTTTTTTTTTTTTTTTTTTT                                                            
UUUUUUUUUUUUUUUUUUU                                                             
VVVVVVVVVVVVVVVVVV                                                              
WWWWWWWWWWWWWWWWW                                                               
XXXXXXXXXXXXXXXX
